Fix overflow

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 .screen > * {
     padding: 8px;
     height: 50%;
+    overflow: hidden;
 }
 
 .buttons {
